# DeadGame-2048

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
AppImage/: myapp.desktop
DeadGame-2048/: AppRun  DeadGame-2048.desktop
include/: Game2048.hpp
local/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
src/: Game2048.cpp  main.cpp
test/: FizzBuzz.cpp  FizzBuzz.hpp  test  test.cpp
usr/include/: Foo.hpp
usr/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
